# fastapi-angular-openapi-gradle-demo

./: .gitignore  README.md  build.gradle  settings.gradle
fastapi-server/: build.gradle  pyproject.toml
fastapi-server/fastapi_server/: app.py
ng-app/: .gitignore  README.md  angular.json  build.gradle  karma.conf.js  package-lock.json  package.json  proxy.conf.json
ng-app/src/: index.html
ng-app/src/app/: app.component.html  app.component.ts  app.module.ts
